about section added

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <div class="header_title">
             <img class="header_title_logo" src="images/logo_landingPage.svg" alt="logo">
             <div class="header_title_container">
-                <h1 cl>PLUK RADIAČNÍ, CHEMICKÉ A BIOLOGICKÉ OCHRANY</h1>
+                <h1>PLUK RADIAČNÍ, CHEMICKÉ <br class="br_hidden"> A BIOLOGICKÉ OCHRANY</h1>
                 <span class="header_title_sub-title">generálmajora Oskara Starkoče</span>
             </div>
         </div>    
-            <img class="header_socials" src="images/socials-fb-ig.svg" alt="social-sites" usemap="#socialsmap">
+            <img class="header_socials" src="images/socials-fb-ig.svg" alt="social-sites" usemap="#socialsmap_header">
 
-            <map name="socialsmap">
+            <map name="socialsmap_header">
                 <area class="area" 
-                        id="area1" 
+                        id="area1_header" 
                         shape="circle" 
                         coords="90,150, 35" 
                         href="https://www.facebook.com/31prchbo" 
@@ -60,7 +60,7 @@
                         alt="facebook-link">
 
                 <area class="area" 
-                        id="area2" 
+                        id="area2_header" 
                         shape="circle" 
                         coords="180,85,37" 
                         href="https://www.instagram.com/31.pluk_liberec/" 
@@ -71,13 +71,37 @@
     </header>
     
     <section id="about" class="about">
-        <div class="about_container">
+        <article class="about_container">
             <h2>O NÁS</h2>
 
             <p class="about_text">
-                31. pluk radiační, chemické a biologické ochrany je specializovaný útvar Armády České republiky s dlouhou historií a tradicí v chemickém vojsku. Pluk se zaměřuje na plnění nejnáročnějších úkolů v oblasti chemického zabezpečení a ochrany proti zbraním hromadného ničení a radioaktivním a toxickým látkám. Jeho specializované služby zahrnují radiační a chemický průzkum, laboratorní analýzu, varování, dekontaminaci a zdravotnické ošetření. Pluk také vyčleňuje síly a prostředky pro operace v zahraničí a spolupracuje s orgány státní správy a místní samosprávy při organizaci vzdělávacích a školících aktivit ve prospěch civilní veřejnosti.
+                31. pluk radiační, chemické a biologické ochrany je specializovaný útvar Armády České republiky s dlouhou historií a tradicí v chemickém vojsku. Pluk se zaměřuje na plnění nejnáročnějších úkolů v oblasti chemického zabezpečení a ochrany proti zbraním hromadného ničení a radioaktivním a toxickým látkám.
             </p>
-        </div>
+            <br>
+            <p class="about_text">
+                Jeho specializované služby zahrnují radiační a chemický průzkum, laboratorní analýzu, varování, dekontaminaci a zdravotnické ošetření. Pluk také vyčleňuje síly a prostředky pro operace v zahraničí a spolupracuje s orgány státní správy a místní samosprávy při organizaci vzdělávacích a školících aktivit ve prospěch civilní veřejnosti.
+            </p>
+        </article>
+
+        <img class="about_socials" src="images/socials-wiki-yt.svg" alt="social-sites" usemap="#socialsmap_about">
+
+            <map name="socialsmap_about">
+                <area class="area" 
+                        id="area1_about" 
+                        shape="circle" 
+                        coords="90,150, 35" 
+                        href="https://www.facebook.com/31prchbo" 
+                        target="_blank" 
+                        alt="wikipedia-link">
+
+                <area class="area" 
+                        id="area2_about" 
+                        shape="circle" 
+                        coords="180,85,37" 
+                        href="https://www.instagram.com/31.pluk_liberec/" 
+                        target="_blank" 
+                        alt="youtube-link">
+            </map>
     </section>
 
 <a href="#header" id="scrollBtn" class="back-to-top"></a>
