--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="bar2"></span>
         <spanc class="bar3"></span>
     </button>
-    
+
     <header id="header">
 
                 <!-- main navbar -->
@@ -99,7 +99,7 @@
                         id="area1_about" 
                         shape="circle" 
                         coords="90,150, 35" 
-                        href="https://www.facebook.com/31prchbo" 
+                        href="https://cs.wikipedia.org/wiki/Pozemn%C3%AD_s%C3%ADly_Arm%C3%A1dy_%C4%8Cesk%C3%A9_republiky?fbclid=IwAR0ytKYGmyjsoKPopZuvdzVLROF0V7Js2fuXud8CkrNVFMryBbqRKJ_W6FA#Chemick%C3%A9_vojsko" 
                         target="_blank" 
                         alt="wikipedia-link">
 
@@ -107,7 +107,7 @@
                         id="area2_about" 
                         shape="circle" 
                         coords="180,85,37" 
-                        href="https://www.instagram.com/31.pluk_liberec/" 
+                        href="https://www.youtube.com/watch?v=pjPagpx51XI" 
                         target="_blank" 
                         alt="youtube-link">
             </map>
