smaller screensize fix, header socialsmap centered?

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <span class="header_title_sub-title">generálmajora Oskara Starkoče</span>
             </div>
         </div>    
-            <img class="header_socials" src="images/socials-fb-ig.svg" alt="social-sites" usemap="#socialsmap_header">
-
-            <map name="socialsmap_header">
+        
+        <map class="socialsmap_header" name="socialsmap_header">
+                <img class="header_socials" src="images/socials-fb-ig.svg" alt="social-sites" usemap="#socialsmap_header">
                 <area class="area" 
                         id="area1_header" 
                         shape="circle" 
@@ -91,7 +91,7 @@
                 Jeho specializované služby zahrnují radiační a chemický průzkum, laboratorní analýzu, varování, dekontaminaci a zdravotnické ošetření. Pluk také vyčleňuje síly a prostředky pro operace v zahraničí a spolupracuje s orgány státní správy a místní samosprávy při organizaci vzdělávacích a školících aktivit ve prospěch civilní veřejnosti.
             </p>
         </article>
-
+        
         <img class="about_socials" src="images/socials-wiki-yt.svg" alt="social-sites" usemap="#socialsmap_about">
 
             <map name="socialsmap_about">
