--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
 
     <section id="contact" class="contact">
       <div class="contact_row1">
-        <a href="https://www.vavyskov.cz/"><img src="images/links/VA-new-rukavovy 1.svg" alt="odkaz Velitelství výcviku - Vojenská akademie"></a>
-        <a href="https://kariera.army.cz/"><img src="images/links/kariera_Army 1.png" alt="odkaz na kariera.ary.cz"></a>
-        <a href="https://unob.cz/"><img src="images/links/Značka-UO-ČJ-marketing 1.svg" alt="odkaz na Univerzitu Obrany"></a>
+        <a href="https://www.vavyskov.cz/"><img class="contact_img" src="images/links/VA-new-rukavovy 1.svg" alt="odkaz Velitelství výcviku - Vojenská akademie"></a>
+        <a href="https://kariera.army.cz/"><img class="contact_img"  src="images/links/kariera_Army 1.png" alt="odkaz na kariera.ary.cz"></a>
+        <a href="https://unob.cz/"><img class="contact_img" src="images/links/Značka-UO-ČJ-marketing 1.svg" alt="odkaz na Univerzitu Obrany"></a>
       </div>
       <div class="contact_row2">
-        <a href="https://www.volareza.cz/"><img src="images/links/VLRZ 1.svg" alt="odkaz na vojenská lázeňská a rekreační zařízení"></a>
-        <a href="https://www.vozp.cz/"><img src="images/links/VoZP_logo4_bezpozadi_krivky 1.svg" alt="odkaz na vojenskou zdravotní pojišťovnu"></a>
+        <a href="https://www.volareza.cz/"><img class="contact_img" src="images/links/VLRZ 1.svg" alt="odkaz na vojenská lázeňská a rekreační zařízení"></a>
+        <a href="https://www.vozp.cz/"><img class="contact_img" src="images/links/VoZP_logo4_bezpozadi_krivky 1.svg" alt="odkaz na vojenskou zdravotní pojišťovnu"></a>
       </div>
 
       <footer class="footer">
