history makeover + links (not complete)

--- a/index.html
+++ b/index.html
@@ -81,49 +81,15 @@
 
     <section id="history" class="history">
         <h2 class="history_title">HISTORIE</h2>
-        <div class="history_container">
-            <div class="history_selection_container">
-                <btn id="chemVojsko" class="history_link history_chemical" role="button" tabindex="0">
-                  <picture>
-                    <source media="(max-width: 1000px)" srcset="images/pohlednice.jpg" />
-                    <img src="images/chem_vojsko.png" alt="chemické vojsko">
-                  </picture>
-                </btn>
+        <div class="history_link_container">
+          <a href="#" id="barracs_link" class="history_link"></a>
 
-                <btn id="lbcVojsko" class="history_link history_liberec" role="button" tabindex="0">
-                  <picture>
-                    <source media="(max-width: 1000px)" srcset="images/mist.jpg" />
-                    <img src="images/lbc_vojsko_historie.png" alt="chemické vojsko v liberci">
-                  </picture>
-                </btn>
-                <btn id="kasarna" class="history_link history_barracs" role="button" tabindex="0">
-                  <picture>
-                    <source media="(max-width: 1000px)" srcset="images/kas610.jpg" />
-                    <img src="images/kas_historie.png" alt="chemické vojsko v liberci">
-                  </picture>
-                </btn>
-            </div>
-            
+          <a href="#" id="chemical_link" class="history_link"></a>
+
+          <a href="#" id="lbc_link"class="history_link"></a>
         </div>
         
     </section>
-
-    <div id="history_content" class="history_content hidden">
-      <button id="historyCloseBtn" class="history_close_btn"></button>
-      <div class="history_title_container">
-          <button class="history_button" id="historyPrevBtn"></button>
-          <h3 id="historyTitle" class="history_content_title">TITLE</h3>
-          <button class="history_button" id="historyNextBtn"></button>
-      </div>
-      <div id="historyText" class="history_content_text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ducimus laborum odio porro aliquid, nemo repellendus, nesciunt, eum commodi neque voluptatum unde voluptates. Harum animi dolores voluptatum dolore sequi! Amet?
-      </div>
-      <div class="history_content_imgs">
-          <img class="history_content_img" src="#" alt="">
-          <img class="history_content_img" src="#" alt="">
-          <img class="history_content_img" src="#" alt="">
-      </div>
-  </div>
 
     <section id="career" class="career">
         <h2 class="career_h2">KARIÉRA</h2>
