added metatags by hanka

--- a/barracs-history.html
+++ b/barracs-history.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="31 pluk radiační chemické a biologické ochrany je vojenská jednotka specializovaná na ochranu proti jaderné, radiologické, chemické a biologické kontaminaci. Na našem webu naleznete informace o historii pluku, výcviku a volných místech.">
+    <meta name="apple-mobile-web-app-title" content="31. pluk">
     <title>31.PRCHBO</title>
 
+    <link rel="apple-touch-icon" href="images/logo_menu.svg">
     <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
     <link rel="stylesheet" href="style.css">
 
