commented maps api

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
-    <script src="https://api.mapy.cz/loader.js"></script>
-	  <script>Loader.load()</script>
+    <!-- <script src="https://api.mapy.cz/loader.js"></script>
+	  <script>Loader.load()</script> -->
   
     
 </head>
@@ -207,7 +207,7 @@
         </div>
 
       </article>
-      <div id="mapa" style="width:400px; height:200px;"></div>
+      <!-- <div id="mapa" style="width:400px; height:200px;"></div>
 	<script type="text/javascript">
 		var center = SMap.Coords.fromWGS84(15.0658183, 50.7762469 );
 		var mapa = new SMap(JAK.gel("mapa"), center, 16);
@@ -228,7 +228,7 @@
     var marker = new SMap.Marker(center, "myMarker", options);
     marker.decorate(SMap.Marker.Feature.Card, card);
     layer.addMarker(marker);
-	</script>
+	</script> -->
 
     </footer>
     
