--- a/barracs-history.html
+++ b/barracs-history.html
@@ -24,7 +24,7 @@
         </button>
         
                 <!-- main navbar -->
-        <nav class="header_main_navbar sticky-menu_link" id="menu">
+        <nav class="header_main_navbar" id="menu">
           <a href="#header" class="main_descp" id="menuDescp">
             <img src="images\logo_menu.svg" alt="" class="descp_logo">
             <p class="descp_text">31. pluk</p>
