added links path

--- a/barracs-history.html
+++ b/barracs-history.html
@@ -24,17 +24,17 @@
         </button>
         
                 <!-- main navbar -->
-        <nav class="header_main_navbar" id="menu">
+        <nav class="header_main_navbar sticky-menu_link" id="menu">
           <a href="#header" class="main_descp" id="menuDescp">
             <img src="images\logo_menu.svg" alt="" class="descp_logo">
             <p class="descp_text">31. pluk</p>
           </a>
             <ul class="main_navbar">
-                <li id="about_li" class="menu_li"><a href="#about">O NÁS</a></li>
-                <li id="history_li" class="menu_li"><a href="#history">HISTORIE</a></li>
-                <li id="career_li" class="menu_li"><a href="#career">KARIÉRA</a></li>
-                <li id="gallery_li" class="menu_li"><a href="#gallery">GALERIE</a></li>
-                <li id="contact_li" class="menu_li"><a href="#contact">KONTAKT</a></li>
+                <li id="about_li" class="menu_li"><a href="index.html#about">O NÁS</a></li>
+                <li id="history_li" class="menu_li"><a href="index.html#history">HISTORIE</a></li>
+                <li id="career_li" class="menu_li"><a href="index.html#career">KARIÉRA</a></li>
+                <li id="gallery_li" class="menu_li"><a href="index.html#gallery">GALERIE</a></li>
+                <li id="contact_li" class="menu_li"><a href="index.html#contact">KONTAKT</a></li>
             </ul>
         </nav> 
 
