mobile landing page components size

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div class="header_title">
             <img class="header_title_logo" src="images/logo_landingPage_edit.svg" alt="logo">
             <div class="header_title_container">
-                <h1>PLUK RADIAČNÍ, CHEMICKÉ <br class="br_hidden"> A BIOLOGICKÉ OCHRANY</h1>
+                <h1>PLUK RADIAČNÍ, CHEMICKÉ <br class="br_hidden">
+                  A BIOLOGICKÉ OCHRANY</h1>
                 <span class="header_title_sub-title">generálmajora Oskara Starkoče</span>
             </div>
         </div>    
@@ -248,17 +249,16 @@
     </section>
 
     <ul class="footer_socials_ul">
-      <li><a href=""><i class="fa-brands fa-facebook-f footer_icon"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-instagram footer_icon"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-wikipedia-w footer_icon"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-youtube footer_icon"></i></a></li>
+      <li><a href="https://www.facebook.com/31prchbo"><i class="fa-brands fa-facebook-f footer_icon"></i></a></li>
+      <li><a href="https://www.instagram.com/31.pluk_liberec/"><i class="fa-brands fa-instagram footer_icon"></i></a></li>
+      <li><a href="https://cs.wikipedia.org/wiki/31._pluk_radiační,_chemické,_biologické_ochrany"><i class="fa-brands fa-wikipedia-w footer_icon"></i></a></li>
+      <li><a href="https://www.youtube.com/watch?v=pjPagpx51XI"><i class="fa-brands fa-youtube footer_icon"></i></a></li>
     </ul>
 
     
 
     <a href="#header" id="scrollBtn" class="back-to-top hidden"></a>
 
-    <script src="test.js"></script>
     <script src="main.js"></script>
     <script src="career.js"></script>
     <script src="https://kit.fontawesome.com/e02d150246.js" crossorigin="anonymous"></script>
