mobile landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="header_hamburgerBtn" id="hamburgerBtn">
             <span class="bar1"></span>
             <span class="bar2"></span>
-            <spanc class="bar3"></span>
+            <span class="bar3"></span>
         </button>
         
         <!-- main navbar -->
