Different instagram widget

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-
     <link rel="stylesheet" href="lightbox.min.css">
-
+    <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <!-- <script src="https://api.mapy.cz/loader.js"></script>
 	  <script>Loader.load()</script> -->
   
@@ -117,11 +116,10 @@
 
     <section id="gallery" class="gallery">
 
-    <!-- LightWidget WIDGET -->
-    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-    <iframe
-      src="//lightwidget.com/widgets/855a372b3a275b0793899164d80c3cdd.html" scrolling="no" allowtransparency="true"
-      class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;">
+    <!-- SnapWidget -->
+    <script src="https://snapwidget.com/js/snapwidget.js"></script>
+    <iframe src="https://snapwidget.com/embed/1038958" class="snapwidget-widget" allowtransparency="true" frameborder="0"
+      scrolling="no" style="border:none; overflow:hidden">
     </iframe>
 
         <!-- <swiper-container id="swiperContainer1" style="--swiper-navigation-color: #A3BA3D; --swiper-pagination-color: #fff" class="mySwiper"
