history flex wrap

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <section id="history" class="history">
         <h2 class="history_title">HISTORIE</h2>
         <div class="history_link_container">
-          <a href="#" id="barracs_link" class="history_link"></a>
+          <a href="#" id="barracs_link" class="history_link barracs"></a>
 
-          <a href="#" id="chemical_link" class="history_link"></a>
+          <a href="#" id="chemical_link" class="history_link chemical"></a>
 
-          <a href="#" id="lbc_link"class="history_link"></a>
+          <a href="#" id="lbc_link"class="history_link lbc"></a>
         </div>
         
     </section>
@@ -119,7 +119,7 @@
     <!-- SnapWidget -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <iframe src="https://snapwidget.com/embed/1038958" class="snapwidget-widget" allowtransparency="true" frameborder="0"
-      scrolling="no" style="border:none; overflow:hidden">
+      scrolling="no" style="border:none; overflow:hidden;">
     </iframe>
 
         <!-- <swiper-container id="swiperContainer1" style="--swiper-navigation-color: #A3BA3D; --swiper-pagination-color: #fff" class="mySwiper"
@@ -148,20 +148,20 @@
 
     <footer class="footer">
       <article class="footer_contacts_container">
-        <div class="footer_location">
+        <a class="footer_location footer_contact_text" href="https://mapy.cz/s/dubelokale" target="_blank">
           <i class="fa-sharp fa-solid fa-location-dot"></i>
-          <a href="https://mapy.cz/s/dubelokale" target="_blank" class="footer_contact_text">
+          <div>
             <p>Vojenský útvar 2266</p>
             <p>náměstí Štefánikovo 564/1</p>
             <p>460 01 Liberec I-Staré Město</p>
-          </a>
-        </div>
+          </div>
+        </a>
 
         <div class="footer_phone">
           <i class="fa-solid fa-phone"></i>
           <div class="footer_contact_text">
-            <p>Personální oddělení: <a class="footer_contact-us" href="tel:+420973 261011">+420 973 261 011</a></p>
-            <p>Tiskový mluvčí: <a class="footer_contact-us" href="tel:+420702008566"> +420 702 008 566</a><br><a class="footer_contact-us" href="mailto:tiskovyliberec@army.cz">tiskovyliberec@army.cz</a></p>
+            <p>Personální oddělení: <a class="footer_contact-us text-animation" href="tel:+420973 261011">+420 973 261 011</a></p>
+            <p>Tiskový mluvčí: <a class="footer_contact-us text-animation" href="tel:+420702008566"> +420 702 008 566</a><br><a class="footer_contact-us text-animation" href="mailto:tiskovyliberec@army.cz">tiskovyliberec@army.cz</a></p>
           </div>
         </div>
 
@@ -191,7 +191,7 @@
 
     </footer>
 
-    <section id="contact" class="contact">
+    <footer id="contact" class="contact">
       <div class="contact_row1">
         
         <a href="https://kariera.army.cz/" title="kariera.army.cz"><img class="contact_img border-radius"  src="images/links/kariera-army.png" alt="odkaz na kariera.army.cz"></a>
@@ -206,7 +206,7 @@
 
         <a href="https://www.benefity-army.cz/"><img class="contact_img" src="images/links/benefity-pro-vojaky.png" alt="odkaz na Benefity pro vojáky"></a>
       </div>
-    </section>
+    </footer>
 
     <ul class="footer_socials_ul">
       <li><a href="https://www.facebook.com/31prchbo"><i class="fa-brands fa-facebook-f footer_icon"></i></a></li>
