--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- Vyvýjeno v rámci VÚ 2266
+autoři: npor. Hana Maruškevičová
+        des. Marcel Hess
+        npor. Jiří Wolker
+-->
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
