comment currently not used scripts(career, swiper)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ autoři: npor. Hana Maruškevičová
     <title>31.PRCHBO</title>
     <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/> -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <script src="https://api.mapy.cz/loader.js"></script>
 	  <script>Loader.load()</script>
@@ -97,17 +97,19 @@ autoři: npor. Hana Maruškevičová
         </ul>
       </div>
       <p class="career_text">Volná místa u 31. pluku</p>
-      <swiper-container id="swiperCareer" class="mySwiper" pagination="true" pagination-clickable="true" space-between="30" slides-per-view="3">
-      </swiper-container>
+      <!-- <swiper-container id="swiperCareer" class="mySwiper" pagination="true" pagination-clickable="true" space-between="30" slides-per-view="3">
+      </swiper-container> -->
+      <p class="descp_text">Připravujeme...</p>
   </section>
   
 
   <section id="gallery" class="gallery">
     <!-- SnapWidget -->
-    <script src="https://snapwidget.com/js/snapwidget.js"></script>
+    <!-- <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <iframe src="https://snapwidget.com/embed/1038958" class="snapwidget-widget" allowtransparency="true" frameborder="0"
       scrolling="no" style="border:none; overflow:hidden;">
-    </iframe>
+    </iframe> -->
+    <p class="descp_text">Připravujeme...</p>
   </section>
 
   <footer id="footer">
@@ -146,7 +148,7 @@ autoři: npor. Hana Maruškevičová
       card.getBody().innerHTML = "Pluk je jediný specializovaný útvar Armády České republiky, který je určen k plnění úkolů chemického zabezpečení AČR a nejsložitějších úkolů ochrany proti zbraním hromadného ničení i proti ostatním radioaktivním a toxickým látkám.";
 
       var options = { 
-      title: "Dobré ráno"
+      title: ""
       };
       var marker = new SMap.Marker(center, "myMarker", options);
       marker.decorate(SMap.Marker.Feature.Card, card);
@@ -173,8 +175,8 @@ autoři: npor. Hana Maruškevičová
   </footer>
 
   <script src="main.js"></script>
-  <script src="career.js"></script>
+  <!-- <script src="career.js"></script> -->
   <script src="https://kit.fontawesome.com/e02d150246.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script> -->
 </body>
 </html>
