links cleanup,historyData removed,stanislav->oskar

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ autoři: npor. Hana Maruškevičová
               Jeho specializované služby zahrnují radiační a chemický průzkum, laboratorní analýzu, varování, dekontaminaci a zdravotnické ošetření. Pluk také vyčleňuje síly a prostředky pro operace v zahraničí a spolupracuje s orgány státní správy a místní samosprávy při organizaci vzdělávacích a školících aktivit ve prospěch civilní veřejnosti.
           </p>
           <p class="about_text">
-            Pluk nese jméno po statečném generálu <a href="https://www.vhu.cz/generalmajor-starkoc-dalsi-z-pribehu-komunisticke-zvule/" class="text-animation">Stanislavu Starkočovi</a>, jenž vedl s neohrožeností a oddaností mnoho klíčových misí pro ochranu země. Jeho odkaz žije dál v srdcích vojáků i civilistů.
+            Pluk nese jméno po statečném generálu <a href="https://www.vhu.cz/generalmajor-starkoc-dalsi-z-pribehu-komunisticke-zvule/" class="text-animation">Oskaru Starkočovi</a>, jenž vedl s neohrožeností a oddaností mnoho klíčových misí pro ochranu země. Jeho odkaz žije dál v srdcích vojáků i civilistů.
           </p>
       </article>
       <div class="container about_socials_container wiki-yt">
