--- a/liberec-history.html
+++ b/liberec-history.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="31 pluk radiační chemické a biologické ochrany je vojenská jednotka specializovaná na ochranu proti jaderné, radiologické, chemické a biologické kontaminaci. Na našem webu naleznete informace o historii pluku, výcviku a volných místech.">
-    <meta name="apple-mobile-web-app-title" content="31. pluk">
-    <title>31.PRCHBO</title>
-    <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="lightbox.min.css">
-    <script src="https://snapwidget.com/js/snapwidget.js"></script>
-    <script src="https://api.mapy.cz/loader.js"></script>
-    <script>Loader.load()</script>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="31 pluk radiační chemické a biologické ochrany je vojenská jednotka specializovaná na ochranu proti jaderné, radiologické, chemické a biologické kontaminaci. Na našem webu naleznete informace o historii pluku, výcviku a volných místech.">
+  <meta name="apple-mobile-web-app-title" content="31. pluk">
+  <title>31.PRCHBO</title>
+  <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
     <section class="history history__barracks">
         <div class="history__header">
             <a class="history__back" href="index.html#history"></a>
@@ -34,7 +25,7 @@
     vytvořena
     zkušební, skladová a opravárenská jednotka, která měla plnit tyto úkoly. Základem výstavby československého
     chemického
-    vojska se stal Ústav pro plynovou službu zřízený v roce 1921 v Olomouci. Až do roku 1922 používala československá
+    vojska se stal Ústav pro plynovou službu zřízený v roce 1921 v Olomouci. <br><br> Až do roku 1922 používala československá
     armáda
     výhradně ochranné masky pocházející z výzbroje armád bojujících na frontách 1. světové války. Nejpočetněji byla v
     roce
@@ -54,7 +45,7 @@
     vojenské
     ochranné masky kompletované firmou Horák Praha. Ochranná maska vz. 23 byla hned v prvním roce výroby objednána v
     počtu
-    170 000 kusů. V roce 1927 bylo vyvinuto několik prototypů modernizované ochranné masky vz. 27. Prvního října 1925
+    170 000 kusů. V roce 1927 bylo vyvinuto několik prototypů modernizované ochranné masky vz. 27. <br><br> Prvního října 1925
     došlo
     k přejmenování Čs. ústavu pro plynovou službu na Vojenský chemický ústav. Působil jako ústřední chemická zbrojnice i
     výcvikové a školicí středisko. První chemickou jednotkou se v roce 1935 stal 401. dělostřelecký oddíl v Olomouci.
@@ -90,7 +81,7 @@
     prostředky“
     nahrazeno termínem „bojové chemické látky“. Samozřejmostí se v této době stává přítomnost sovětského poradce na
     velitelství chemického vojska. Hlavní součásti chemického vojska tvořil chemický prapor 101 v Jaroměři a 103 v
-    Šafárikově. Prvního listopadu 1952 byl v Liberci zřízen 105. plamenometný prapor pod velením kpt. Zdeňka Špačka. Od
+    Šafárikově. Prvního listopadu 1952 byl v Liberci zřízen 105. plamenometný prapor pod velením kpt. Zdeňka Špačka. <br><br> Od
     roku
     1952 byla rovněž věnována pozornost radiologické ochraně. Po 2. světové válce převažovaly ve výzbroji československé
     armády trofejní německé ochranné masky vz. 30N a vz. 38N (434 000 ks). V letech 1945 až 1951 byla v Zubří obnovena
@@ -125,9 +116,5 @@
     problémy s financováním.</p>
         </article>
     </section>
-
-    <script src="https://kit.fontawesome.com/e02d150246.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 </body>
-
 </html>
