--- a/chemical-history.html
+++ b/chemical-history.html
@@ -2,21 +2,15 @@
 <html lang="cs">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="31 pluk radiační chemické a biologické ochrany je vojenská jednotka specializovaná na ochranu proti jaderné, radiologické, chemické a biologické kontaminaci. Na našem webu naleznete informace o historii pluku, výcviku a volných místech.">
-    <meta name="apple-mobile-web-app-title" content="31. pluk">
-    <title>31.PRCHBO</title>
-    <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="lightbox.min.css">
-    <script src="https://snapwidget.com/js/snapwidget.js"></script>
-    <script src="https://api.mapy.cz/loader.js"></script>
-    <script>Loader.load()</script>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="31 pluk radiační chemické a biologické ochrany je vojenská jednotka specializovaná na ochranu proti jaderné, radiologické, chemické a biologické kontaminaci. Na našem webu naleznete informace o historii pluku, výcviku a volných místech.">
+  <meta name="apple-mobile-web-app-title" content="31. pluk">
+  <title>31.PRCHBO</title>
+  <link rel="icon" type="image/x-icon" href="images/web-ico.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,7 +27,8 @@
             vojska jako samostatného druhu vojska. Tato myšlenka byla ale realizována až dekretem prezidenta republiky ze dne 27.
             září 1949. Přesně třicet let po historické události, jíž bylo zřízení Referátu pro plynovou službu, tak českoslovenští
             chemici vstoupili do další etapy svého vývoje. Hlavní součásti chemického vojska tvořily chemické prapory 101 v Jaroměři
-            a 103 v Šafárikově. Dne 1. listopadu 1952 byl v Liberci zřízen 105. plamenometný prapor. Od roku 1952 byla rovněž
+            a 103 v Šafárikově. Dne 1. listopadu 1952 byl v Liberci zřízen 105. plamenometný prapor. 
+            <br><br> Od roku 1952 byla rovněž
             věnována pozornost radiologické ochraně. Koncepce činnosti chemického vojska vycházela od druhé poloviny padesátých let
             z nutnosti předpokládat masové použití zbraní hromadného ničení. V říjnu 1957 byla zřízena 1. brigáda chemické ochrany
             se sídlem v Trutnově (součástí byl i v roce 1958 reorganizovaný 105. prapor chemické ochrany v Liberci a v říjnu 1960
@@ -47,22 +42,18 @@
             činnosti českých a slovenských chemiků. Reprezentantem chemického vojska v ČR se pak v Liberci stala Výcviková a
             mobilizační základna chemického vojska. Díky řadě úspěchů na mezinárodním poli se po vstupu České republiky do NATO
             stala součástí sil okamžité reakce NATO i 9. rota chemické ochrany, která vznikla v roce 1999 v Liberci a stala se první
-            plně profesionální jednotkou Armády České republiky. Dne 1. července 2005 vznikla 31. brigáda radiační, chemické a
+            plně profesionální jednotkou Armády České republiky. <br><br> Dne 1. července 2005 vznikla 31. brigáda radiační, chemické a
             biologické ochrany sídlící v Liberci, které se 1. prosince 2013 zreorganizovala na 31. pluk radiační, chemické a
             biologické ochrany. Jedná se o jediný specializovaný svazek Armády České republiky určený pro řešení úkolů chemického
             zabezpečení jednotek AČR a odstraňování následků po použití zbraní hromadného ničení. Chemické jednotky se zúčastnily
             nejen operací POUŠTNÍ BOUŘE a TRVALÁ SVOBODA, které probíhaly a stále trvají na územích Saúdské Arábie, Kuvajtu, Iráku a
             Afghánistánu, ale rovněž aliančních a koaličních operací v Bosně a Hercegovině a Kosovu. Nasazeny byly také při ochraně
             olympijských her v Řecku a Summitu NATO v Turecku.
-            Na tradice vytvářené od roku 1919 armádními chemiky v meziválečném období navazuje i naše současné chemické vojsko. Tak
+            <br><br> Na tradice vytvářené od roku 1919 armádními chemiky v meziválečném období navazuje i naše současné chemické vojsko. Tak
             jako byli naši předkové připraveni položit své životy při obraně vlasti v roce 1938 a řada z nich dostála své přísaze i
             v bojích druhé světové války, nasazují i dnešní příslušníci chemického vojska své životy v mírových misích i v operacích
             proti mezinárodnímu terorismu, jejichž cílem je uchování demokracie vydobyté v krvavých bojích obou světových válek.</p>
         </article>
     </section>
-
-    <script src="https://kit.fontawesome.com/e02d150246.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 </body>
-
 </html>
