--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ autoři: npor. Hana Maruškevičová
         <li><a href="https://cs.wikipedia.org/wiki/31._pluk_radiační,_chemické,_biologické_ochrany"><i class="fa-brands fa-wikipedia-w footer_icon"></i></a></li>
         <li><a href="https://www.youtube.com/watch?v=pjPagpx51XI"><i class="fa-brands fa-youtube footer_icon"></i></a></li>
       </ul>
-      <a href="#header" id="scrollBtn" class="back-to-top hidden"></a>
+      <!-- <a href="#header" id="scrollBtn" class="back-to-top hidden"></a> -->
     </div>
   </footer>
 
