wiki href updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ autoři: npor. Hana Maruškevičová
           </p>
       </article>
       <div class="container about_socials_container wiki-yt">
-          <a target="_blank" href="https://cs.wikipedia.org/wiki/Pozemn%C3%AD_s%C3%ADly_Arm%C3%A1dy_%C4%8Cesk%C3%A9_republiky?fbclid=IwAR0ytKYGmyjsoKPopZuvdzVLROF0V7Js2fuXud8CkrNVFMryBbqRKJ_W6FA#Chemick%C3%A9_vojsko"  class="wiki icons"><i class="fa-brands fa-wikipedia-w"></i></a>
+          <a target="_blank" href="https://cs.m.wikipedia.org/wiki/31._pluk_radia%C4%8Dn%C3%AD,_chemick%C3%A9_a_biologick%C3%A9_ochrany"  class="wiki icons"><i class="fa-brands fa-wikipedia-w"></i></a>
           <a target="_blank"  href="https://www.youtube.com/watch?v=pjPagpx51XI" class="yt icons"><i class="fa-brands fa-youtube"></i></a>
         </div>
   </section>
